# MParT

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Config.cmake.in  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.docker/: Dockerfile  build_kokkos.sh  build_mpart.sh  environment.yml
.doctrees/: environment.pickle  index.doctree
.github/: environment.yml  install-doxygen.sh
MParT/: AdaptiveTransportMap.h  AffineFunction.h  AffineMap.h  BasisEvaluator.h  ComposedMap.h  ConditionalMapBase.h  DebugMap.h  DebugMap1.h  DebugMap2.h  DerivativeFlags.h  HermiteFunction.h  IdentityMap.h  Initialization.h  InnerMarginalAffineMap.h  InverseMap.h  LinearizedBasis.h  MapFactory.h  MapIO.h  MapObjective.h  MapOptions.h  MarginalAffineMap.h  MonotoneComponent.h  MonotoneIntegrand.h  MultiIndexSet.h  MultivariateExpansion.h  MultivariateExpansionWorker.h  OrthogonalPolynomial.h  ParameterizedFunctionBase.h  PositiveBijectors.h  ProductExpansion.h  Quadrature.h  RectifiedMultivariateExpansion.h  Sigmoid.h  SingleEntryMap.h  SummarizedMap.h  TensorProductFunction.h  TrainMap.h  TrainMapAdaptive.h  TriangularMap.h  UnivariateExpansion.h  (+1 more)
_sources/: index.rst.txt
_static/: pygments.css
bindings/julia/: CMakeLists.txt
bindings/julia/include/: CommonJuliaUtilities.h  JlArrayConversions.h
bindings/julia/package/: MParT.jl
bindings/julia/src/: AdaptiveTransportMap.cpp  AffineMap.cpp  CommonJuliaUtilities.cpp  ComposedMap.cpp  ConditionalMapBase.cpp  Distributions.cpp  JlArrayConversions.cpp  MapFactory.cpp  MapObjective.cpp  MapOptions.cpp  MultiIndex.cpp  MultiIndexWrapper.cpp  ParameterizedFunctionBase.cpp  TrainMap.cpp  TrainMapAdaptive.cpp  TriangularMap.cpp  Wrapper.cpp
bindings/julia/tests/: Test_MultiIndex.jl
bindings/matlab/: CMakeLists.txt  notes_binding.md
bindings/matlab/include/: MexArrayConversions.h  MexMapOptionsConversions.h  MexOptionsConversions.h  MexWrapperTypes.h
bindings/matlab/mat/: ATMOptions.m  AdaptiveTransportMap.m  AffineMap.m  BasisTypesOpt.m  ComposedMap.m  ConditionalMap.m  CreateComponent.m  CreateSigmoidComponent.m  CreateSigmoidTriangular.m  CreateTriangular.m  DeserializeMap.m  FixedMultiIndexSet.m  GaussianKLObjective.m  KokkosFinalize.m  KokkosInitialize.m  MultiIndex.m  MultiIndexSet.m  MultivariateExpansion.m  ParameterizedFunction.m  TestExp.m  TrainMap.m  TrainOptions.m  TriangularMap.m
bindings/matlab/mat/MapOptions/: BasisTypes.m  EdgeTypes.m  MapOptions.m  PosFuncTypes.m  SigmoidTypes.m
bindings/matlab/src/: BasisTypes_mex.cpp  BigLibrary_mex.cpp  ConditionalMap_mex.cpp  FixedMultiIndexSet_mex.cpp  KokkosTesting.cpp  KokkosUtilities_mex.cpp  MParT_mex.cpp  MapObjective_mex.cpp  MapOptions_mex.cpp  MexArrayConversions.cpp  MexMapOptionsConversions.cpp  MexOptionsConversions.cpp  MultiIndexSet_mex.cpp  MultiIndex_mex.cpp  ParameterizedFunctionBase_mex.cpp
bindings/matlab/tests/: FixedMultiIndexSetTest.m  MultiIndexSetTest.m  SigmoidTest.m  Test_AffineMap.m  Test_ComposedMap.m  Test_MultiIndex.m  Test_MultiIndexSet.m  Test_ParameterizedFunction.m  Test_TriangularMap.m  TrainMapAdaptiveTest.m  TrainMapTest.m  runtests.m  test-results-matlab.xml
bindings/python/: CMakeLists.txt
bindings/python/include/: CommonPybindUtilities.h
bindings/python/package/: __init__.py  torch.py  torch_helpers.py
bindings/python/src/: AdaptiveTransportMap.cpp  AffineMap.cpp  CommonPybindUtilities.cpp  ComposedMap.cpp  ConditionalMapBase.cpp  DebugMap.cpp  Distributions.cpp  IdentityMap.cpp  MapFactory.cpp  MapObjective.cpp  MapOptions.cpp  MultiIndex.cpp  MultivariateExpansion.cpp  ParameterizedFunctionBase.cpp  Serialization.cpp  Serialize.cpp  SummarizedMap.cpp  TrainMap.cpp  TrainMapAdaptive.cpp  TriangularMap.cpp  Wrapper.cpp
bindings/python/tests/: Test_FixedMultiIndexSet.py  Test_MapFactory.py  Test_MultiIndex.py  Test_MultiIndexSet.py  Test_TriangularMap.py  Test_script.py  test_AffineFunction.py  test_AffineMap.py  test_ComposedMap.py  test_ComposedMap_moveCoeffs.py  test_ConditionalMapBase.py  test_FixedMultiIndexSet.py  test_IdentityMap.py  test_MapFactory.py  test_MultiIndex.py  test_MultiIndexSet.py  test_Serialization.py  test_SummarizedMap.py  test_TorchWrapper.py  test_TrainMap.py  test_TrainMapAdaptive.py  test_TriangularMap.py  test_TriangularMap_moveCoeffs.py
cmake/: BuildDocs.cmake  FindJulia.cmake  FindSphinx.cmake  Findcereal.cmake  SetInstallPaths.cmake  Submodules.cmake
docs/: conf.py  index.rst  mpart.doxyfile.in
examples/cpp/MonotoneLeastSquares/: .gitignore  CMakeLists.txt  MonotoneLeastSquares.cpp  plot.py
joss/: paper.bib  paper.md
source/: getting_started.html  installation.html  mathematics.html  notes.html
src/: AdaptiveTransportMap.cpp  AffineFunction.cpp  AffineMap.cpp  CMakeLists.txt  ComposedMap.cpp  ConditionalMapBase.cpp  DebugMap0.cpp  DebugMap1.cpp  DebugMap2.cpp  IdentityMap.cpp  Initialization.cpp  InnerMarginalAffineMap.cpp  InverseMap.cpp  MapFactory.cpp  MapFactoryImpl1.cpp  MapFactoryImpl10.cpp  MapFactoryImpl11.cpp  MapFactoryImpl12.cpp  MapFactoryImpl13.cpp  MapFactoryImpl14.cpp  MapFactoryImpl15.cpp  MapFactoryImpl16.cpp  MapFactoryImpl17.cpp  MapFactoryImpl18.cpp  MapFactoryImpl2.cpp  MapFactoryImpl3.cpp  MapFactoryImpl4.cpp  MapFactoryImpl5.cpp  MapFactoryImpl6.cpp  MapFactoryImpl7.cpp  MapFactoryImpl8.cpp  MapFactoryImpl9.cpp  MapIO.cpp  MapObjective.cpp  MarginalAffineMap.cpp  MultiIndexSet.cpp  MultivariateExpansionWorker.cpp  ParameterizedFunctionBase.cpp  SingleEntryMap.cpp  SummarizedMap.cpp  (+3 more)
tests/: CMakeLists.txt  KokkosInfo.cpp  RunTests.cpp  Test_AdaptiveTransportMap.cpp  Test_AffineFunction.cpp  Test_AffineMap.cpp  Test_ArrayConversions.cpp  Test_BasisEvaluator.cpp  Test_ComposedMap.cpp  Test_ConditionalMapBase.cpp  Test_HermiteFunctions.cpp  Test_IdentityMap.cpp  Test_InnerMarginalAffineMap.cpp  Test_LinearAlgebra.cpp  Test_LinearizedBasis.cpp  Test_MapFactory.cpp  Test_MapObjective.cpp  Test_MarginalAffineMap.cpp  Test_MonotoneComponent.cpp  (+19 more)
(+313 files in other folders)
